# docucrew-backend

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2df55653ad28_add_cascade_delete_to_document_query_.py  584b3bc372cc_initial_migration.py  ea8c7b511652_initial_migration.py
app/: main.py
app/api/: router.py
app/api/routes/: auth.py  collections.py  documents.py  query.py
app/core/: config.py  security.py
app/crews/: tools.py
app/crews/ingestion/: agents.py  crew.py  tasks.py
app/crews/query/: agents.py  crew.py  tasks.py
app/db/: database.py
app/models/: collection.py  document.py  query_history.py  user.py
app/schemas/: auth.py  collection.py  document.py  query.py
app/services/: chroma_service.py  file_service.py
