[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "chromadb>=1.1.1",
    "crewai>=1.6.1",
    "crewai-tools>=1.6.1",
    "fastapi>=0.136.3",
    "langchain-text-splitters>=1.1.2",
    "mcp>=1.27.2",
    "openai>=2.41.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.13.0",
    "python-docx>=1.2.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "sqlmodel>=0.0.38",
    "tavily-python>=0.7.25",
    "uvicorn[standard]>=0.49.0",
]
